Fixed buttons, student card, alignment and added span

--- a/client/src/Components/MainPage/MainPage.css
+++ b/client/src/Components/MainPage/MainPage.css
@@ -13,16 +13,16 @@
     width: 25vw;
     height: fit-content;
     position: relative;
-    margin-left: 8%;
     margin-top: 3em;
+    align-items: center;
 }
 
 .main-student-photo{
     width: 20em;
-    align-self: center;
+    height: 20em;
     margin-top: 0.5em;
-    margin-right: auto;
-    border-radius: 5%;
+    border-radius: 5% 5% 0% 0%;
+
 }
 
 .student-info{
@@ -31,7 +31,7 @@
     width: 20em;
     height: fit-content;
     box-shadow: 2px 7px 7px rgba(0, 0, 0, 0.25);
-    border-radius: 5%;
+    border-radius: 0% 0% 5% 5%;
 }
 
 .student-title{
@@ -60,6 +60,10 @@
     margin-bottom: 0.5em;
 }
 
+.academic-marks{
+    font-weight: bold;
+}
+
 .student-degree-details{
     display: flex;
     flex-direction: row;
@@ -81,26 +85,15 @@
     display: flex;
     flex-direction: row;
     margin-top: 4em;
-    margin-left: 10%;
-}
-
-.student-reject-button{
-    border-color: white;
-    background: white;
-    border-radius: 5%;
+    width: 20em;
 }
 
 .student-reject-image{
     width: 4em;
-}
-
-.student-interest-button{
-    margin-left: 25%;
-    border-color: white;
-    background: white;
-    border-radius: 5%;
+    margin-left: 20%;
 }
 
 .student-interest-image{
     width: 4em;
+    margin-left: 20%;
 }
